--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<meta http-equiv="refresh" content="0; url=http://example.com/" />
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Tundra Fizz</title>
+  <meta http-equiv="refresh" content="0; url=http://example.com/" />
+</head>
+<body>
+</body>
+</html>
