--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Tundra Fizz</title>
-  <meta http-equiv="refresh" content="0; url=http://example.com/" />
+  <meta http-equiv="refresh" content="0; url=http://example.com/">
 </head>
 <body>
 </body>
